Clarifying we are talking degrees Celsius

--- a/recipes/Hefezopf.qmd
+++ b/recipes/Hefezopf.qmd
@@ -39,7 +39,7 @@ Cover the yeast dough with a cloth and leave to rise in a warm place for approx.
 
 When the dough has approximately doubled in volume, place it on a lightly floured work surface.
 
-Knead again briefly with your hands. Divide the dough into three equal pieces and shape them into strands. Braid the strands into a plait. Place the plaits on a baking tray lined with baking paper, cover with a cloth and leave to rise for another 30 minutes. Preheat the oven to 175 degrees top and bottom heat. 
+Knead again briefly with your hands. Divide the dough into three equal pieces and shape them into strands. Braid the strands into a plait. Place the plaits on a baking tray lined with baking paper, cover with a cloth and leave to rise for another 30 minutes. Preheat the oven to 175 degrees top and bottom heat. (Jacob, we are talking about degrees Celcius here :) ) 
 
 Whisk the egg yolk with the milk and brush the plaits with it.
 
