--- a/recipes/carrot-cake.qmd
+++ b/recipes/carrot-cake.qmd
@@ -1,6 +1,8 @@
 ---
   title: Carrot Cake 
   author: Marta
+  title-block-banner: '#de7b12'
+  title-block-banner-color: 'white'
 ---
 
 ![Wild carrot from a botany textbook according to ChatGPT *\<here I wanted to have an emoji of a [brain](https://emojipedia.org/brain)\>*](images/carrot.webp){fig-align="center" width="500"}
