trying carrot in source

--- a/recipes/carrot-cake.qmd
+++ b/recipes/carrot-cake.qmd
@@ -29,7 +29,7 @@ When baking, I'm more of a 'na oko' person. But for those who need the utmost pr
 
 **Dough:**
 
--   carrots (medium size) - 2 ????
+-   carrots (medium size) - 2 :carrot:
 
 -   oil - 1 cup
 
