--- a/recipes/corn-squared-beef.qmd
+++ b/recipes/corn-squared-beef.qmd
@@ -33,3 +33,7 @@ Instructions:
 -   Put the corned beef into the pan on medium heat and allow it to warm/fry a bit (the beef is already cooked, it is just like a gross paste when it comes out)
 -   Once the beef has started to dry out and fry, add the corn (you are just warming it up). Bonus points if you blackened the corn in another pan already- will add more pop/texture to the dish.
 -   Serve!
+
+::: callout-tip
+You can add other vegetables to the mix. Carrots are nice since they at crunch (especially if you don't blacken the corn)
+:::
