Fix #13 Remove the colons in your titles

--- a/recipes/Homemade-bread.qmd
+++ b/recipes/Homemade-bread.qmd
@@ -7,7 +7,7 @@ author: Antoine
 If you are tired of polish bread or of spending all your salary in [Bienvenu](https://www.google.pl/maps/place/BIENVENU+%7C+piekarnia+francuska/@54.3821843,18.5840349,17z/data=!3m1!4b1!4m6!3m5!1s0x46fd75426355e235:0x2416342186c32b7d!8m2!3d54.3821812!4d18.5866098!16s%2Fg%2F11j7vr7rwm?hl=fr&entry=ttu&g_ep=EgoyMDI0MTEyNC4xIKXMDSoASAFQAw%3D%3D), you can make your own tasteful "french" bread with this recipe.
 :::
 
-## Ingredients:
+## Ingredients
 
 -   500 gr of wholegrain flour (typ 2000 in Poland/ T110 in France)
 -   250 g of flour (typ 480 in Poland/ T55 in France)
@@ -18,7 +18,7 @@ If you are tired of polish bread or of spending all your salary in [Bienvenu](ht
 
 (optional : herbs, dried tomatoes, olives…)
 
-## Preparation:
+## Preparation
 
 Put 10 cl of water in the microwave until a little warm (not too hot). Add the yeast, a pinch of sugar and stir. Leave for around 10 minutes (This step is optional if you use sourdough).
 
@@ -32,13 +32,13 @@ Form a ball of dough and leave it in a warm place, under a wet tea towel for at 
 
 Once the ball is twice its original size, place it on a kitchen counter lightly dusted with flour, and fold it on itself three to four times.
 
-## Shaping:
+## Shaping
 
 Give the shape you want (baguette, long bread, ball…) to the dough.
 
 Lightly dust a baking tray with flour, and place the bread on it. Leave it under a tea towel for 30-40 minutes (basically the time for the oven to pre-heat, sorry for spoiling one of the next steps).
 
-## Baking:
+## Baking
 
 Put water in a dish (that can go to the oven) and place it on the bottom of the oven.
 
