Fix #19 Don't make Enjoy a header

--- a/recipes/Homemade-bread.qmd
+++ b/recipes/Homemade-bread.qmd
@@ -50,4 +50,4 @@ The bread is ready when it has a golden colour and sounds hollow when you knock 
 
 ![How it should look like in the end](images/Bread.webp)
 
-## Enjoy!
+**Enjoy!**
