--- a/recipes/carrot-cake.qmd
+++ b/recipes/carrot-cake.qmd
@@ -93,3 +93,5 @@ Make this baking experience fun for yourself and drink every time you read 'mix'
 
 
 I AM WRITTING THIS IN SOURCE, DESPERATE TO GET :carrot:
+
+AND NOW I AM DESPERATE IN NANO. PLEASE NANO GIVE ME :brain:
