--- a/recipes/carrot-cake.qmd
+++ b/recipes/carrot-cake.qmd
@@ -3,6 +3,7 @@
   author: Marta
   title-block-banner: '#de7b12'
   title-block-banner-color: 'white'
+  from: markdown+emoji
 ---
 
 ![Wild carrot from a botany textbook according to ChatGPT 🧠](images/carrot.webp){fig-align="center" width="500"}
